fixed button spacing in provide

--- a/src/styles/provide.scss
+++ b/src/styles/provide.scss
@@ -14,7 +14,7 @@
 }
 .provide-button-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin-bottom: 10px;
 }
 input[type="checkbox"] {
@@ -27,7 +27,6 @@ input[type="checkbox"] {
   height: 16px;
   border: 2px solid $text;
   border-radius: 5px;
-  //padding: 10px;
   display: grid;
   place-content: center;
 }
